--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+New Oxid Admin Theme
+
+This will be deployed on Oxid CE 4.8.1
+
+________________________________________________________________________________________________________
 Thank you for using the OXID eShop!
 
 This software is written in PHP + MySQL and runs platform independent on Apache webservers.
